# mcp-yfinance-server

./: Dockerfile  README.md  install.ps1  main.py  pyproject.toml  test_server_fun.py
mcp-yfinance-server/: pyproject.toml
mcp-yfinance-server/source/: yf_server.py
yfinance_mcp/: server.py
yfinance_mcp/tools/: __init__.py  state.py  technicals.py  utils.py
