[project]
name = "mcp-yfinance-server"
version = "0.1.0"
description = "A Yfinance MCP Server providing comprehensive financial data and analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "yfinance>=0.2.55",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "typing-extensions>=4.5.0",
    "textblob>=0.19.0",
    "matplotlib>=3.10.1",
    "ipython>=9.1.0",
    "fastmcp>=2.11.1",
    "fastapi",
    "uvicorn",
    "plotly>=6.2.0"
]

[[project.authors]]
name = "Sauniket Sarkar"
email = "saunikets@gmail.com"

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["yfinance_mcp*"]

[project.scripts]
mcp-yfinance-server = "yfinance_mcp.server:main"
